# NARSIL

./: .gitignore  README.md  models.py  pyproject.toml  test.py  train.py  utilities.py
configs/: test.json  train.json
dataset/: tsp1000_test_concorde.pt  tsp200_test_concorde.pt  tsp20_test_concorde.pt  tsp500_test_concorde.pt
outputs/tsp1000/: config.json
outputs/tsp500/: config.json
